# Drishti_IC

./: .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  response.json  tailwind.config.js
ai/: LICENSE  batch_process_images.py  ic_chip_ocr.py  ic_physical_analysis.py  ic_pin_detector.py  requirements.txt  simple_ocr.py
backend/: .gitignore  add_constraint.sql  app.py  example_datasheet_download.py  example_upload.py  main.py  requirements.txt  test_ic_analysis.py  verify_check.py
contracts/: openapi.yaml  openapi_trash.yaml
dimensions/: .gitignore  ic_dimension_measurement.py  ic_measurement_lqfn_enhanced.py  measure_all_ics.py
docker/: backend.Dockerfile  frontend.Dockerfile
frontend/: .gitignore  .prettierignore  README.md  WAILS_SETUP.md  app.go  eslint.config.js  go.mod  index.html  next.config.js  package-lock.json  package.json  prettier.config.mjs  vite.config.ts  wails.json
local_model/: Makefile  README.md  api_server.py  main.py  pyproject.toml  requirements.txt  start.sh  start_api.sh  start_server.sh  start_services.sh
local_model/app/: config.py  main.py  prompts.py  schemas.py
local_model/app/api/v1/: vision.py
local_model/app/core/: config.py  prompts.py
local_model/app/routers/: chat.py  health.py  vision.py
local_model/app/schemas/: vision.py
local_model/app/services/: llama.py  llm.py
local_model/scripts/: start_api.sh  start_llama.sh
local_model/tests/: test_main.py
miniInternVL/: mini.py
models/: README.md  marking_service.py  requirements.txt
sam2/: sam2.py
scripts/: setup-dev.sh  (+3 more)
(+231 files in other folders)
